--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./js/snaplet-icon.ico" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Color Picker</title>
   </head>
   <body>
@@ -16,6 +16,6 @@
       <button id="saveButton">Guardar Color</button>
     </div>
     <div id="colorPalettes"></div>
-    <script src="./js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
